VersionBasedMicriServiceApp/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listeners_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      traffic_direction: OUTBOUND
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              generate_request_id: true
              tracing:
                provider:
                  name: envoy.tracers.zipkin
                  typed_config:
                    '@type': "type.googleapis.com/envoy.config.trace.v3.ZipkinConfig"
                    collector_cluster: jaeger
                    collector_endpoint: "/api/v2/spans"
                    shared_span_context: false
                    collector_endpoint_version: HTTP_JSON
              stat_prefix: ingress_http
              route_config: 
                name: all
                virtual_hosts:
                  - name: allbackend
                    domains: 
                      - '*'
                    routes:
                      - match: { prefix: "/micro2/"}
                        route:
                          prefix_rewrite: "/"
                          cluster: micro2_cluster
                      - match: { prefix: "/micro/"}
                        route:
                          prefix_rewrite: "/"
                          cluster: micro_cluster
                      - match: 
                          prefix: "/" 
                          # headers:
                          #   - name: InstanceId
                          #     exact_match: "1"
                        route:
                          prefix_rewrite: "/"
                          cluster: all_cluster
              http_filters:
                  - name: envoy.filters.http.router
          # transport_socket:
          #   name: envoy.transport_sockets.tls
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          #     common_tls_context:
          #       tls_certificates:
          #         certificate_chain: {filename: "/etc/envoy/localhost.crt"}
          #         private_key: {filename: "/etc/envoy/localhost.decrypted.key"}
  clusters:
    - name: all_cluster
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: all_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro
                    port_value: 3011
            - endpoint:
                address:
                  socket_address:
                    address: micro2
                    port_value: 3014
    - name: micro_v1_cluster
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: micro_v1_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro_v1
                    port_value: 3012
    - name: micro_v2_cluster
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: micro_v2_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro_v2
                    port_value: 3013
    - name: micro2_cluster
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: micro2_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro2
                    port_value: 3014
    - name: micro_cluster
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: micro_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro
                    port_value: 3011
    - name: jaeger
      connect_timeout: 2s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: jaeger
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: jaeger
                    port_value: 9411
