VersionBasedMicriServiceApp/envoy/EnvoyFor50-50TrafficShift.yaml
static_resources:
  listeners:
    - name: listeners_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config: 
              '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
              stat_prefix: http_proxy
              route_config: 
                name: all
                virtual_hosts:
                  - name: allbackend
                    domains: 
                      - '*'
                    routes:
                      - match: 
                          prefix: "/" 
                          runtime_fraction:
                            default_value:
                              numerator: 10
                              denominator: HUNDRED
                            runtime_key: routing.traffic_shift.micro
                        route:
                          cluster: micro_v1_cluster
              http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: micro_v1_cluster
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: micro_v1_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: micro_v1
                    port_value: 3012
